Completed Valentine's project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>Will you be my valentine?</h1>
+        <div>
+            <h1>Will you be my valentine?</h1>
+        </div>
+        <div>
+            <img src="IMG_7322.jpg">
+        </div>
+        <div>
+            <a href="index_2.html"><button>Yes!</button></a>
+            <button id="no-button">No...</button>
+        </div>
     </body>
 </html>
+<script src="index.js"></script>
