Updated href error

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div>
             <a href="index_2.html"><button>Yes!</button></a>
-            <button id="no-button">No...</button>
+            <a id="no-button-anchor"><button id="no-button">No...</button></a>
         </div>
     </body>
 </html>
