--- a/index_2.html
+++ b/index_2.html
@@ -13,5 +13,8 @@
         <div>
             <a href="index.html"><button>Go Back</button></a>
         </div>
+        <div>
+            <a href="index_3.html" id="letter-to-simren"><button id="letter-button">For Simren - Click to Read!</button></a>
+        </div>
     </body>
 </html>
