--- a/index_3.html
+++ b/index_3.html
@@ -8,22 +8,24 @@
             <p>
                 Dear Simren,
                 <br><br>
-                If someone were to ask me about what makes me happy, the first thing I would say is that it's because of you.
-                Dancing and laughing with you at Omnia was one of the most amazing nights of my life. To think that I managed
-                to stay in contact with you and help us make our relationship happen is nothing short of a miracle.
+                If someone were to ask me about the things that make me happy, the first thing I would mention is you.
+                Dancing and laughing with you at Omnia was one of the most amazing nights of my life. Since then, you have
+                continued to make me one of the happiest boyfriends ever. The fact that we stayed in contact and made our
+                relationship happen is nothing short of a miracle.
                 <br><br>
-                Your willingness to get out of your comfort zone and visit me at Purdue was one of the sweetest things you
-                could do. Our double date, our nights out, our walks together - all of them were some of the most amazing
-                memories I have made. I loved being with you every second of that trip. Even to this day, you made the ups
-                and downs of that semester worth it.
+                You made me so happy when you visited me at Purdue. That was one of the sweetest things anyone has done for me.
+                Our double date, our nights out, our walks together - these were some of the most amazing memories I have made.
+                Even to this day, you make the ups and downs of that semester worth it. I loved being with you every second of
+                that trip, and I love being with you every second today.
                 <br><br>
-                After visiting you in Santa Barbara and spending the most romantic nights going out with you, I felt sparks
+                After visiting you in Santa Barbara and spending the most romantic nights with you, I felt sparks
                 like never before. We clicked so well, and despite me feeling unwell, you were so sweet and welcoming to me.
                 Everything you do for me makes me feel like the luckiest man alive.
                 <br><br>
-                I think that from the start, I've known that I wanted to be your boyfriend. 
-                Nothing in this world lasts forever, which is why I want to cherish our lives together and celebrate this
-                beautiful relationship. In this life, and all the rest, and whatever comes after, <h8>I love you, Simren.</h8>
+                From the start, I have known that I wanted to be your boyfriend. Nothing in this world lasts forever, so
+                I want to cherish our lives together. Let's celebrate this beautiful relationship together!
+                <br><br>
+                In this life, and all the rest, and whatever comes after, <h8>I love you, Simren.</h8>
                 <br><br>
                 From your cuteass,
                 <br>
